--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- adding to branch -->
+      <!-- adding to branch lol -->
       <!-- Student code goes here -->
     </main>
 
