--- a/index.html
+++ b/index.html
@@ -12,8 +12,53 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- adding to branch lol -->
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The meta element is used to specify character set, page descriptioin, keywords, author of the document, and viewport settings and is nested in the head section.</li>
+          <li>The title element is nested in the head section and names our document.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The headings elements are numbered h1-h6 and represent different levels of section headings with "h1" being the most prominent and "h6" being the least prominent.</li>
+          <li>The division element is a generic block-level container.</li>
+          <li>The span element is a generic inline container.</li>
+          <li>The anchor element creates a hyperlink.</li>
+          <li>The line break element creates a line break where it is placed.</li>
+
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS notes here.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git add [file]: adds a file as it looks now to your next commit (stage)</li>
+          <li>git reset [file]: unstage a file while retaining the changes in the working directory</li>
+          <li>git diff: diff of what is changed but not staged</li>
+          <li>git diff --staged: diff of what is staged but not yet committed</li>
+          <li>git commit -m "[descriptive message]": commit your staged content as a new commit snapshot</li>
+          <li>git branch: list your branches. a * will appear next to the currently active branch</li>
+          <li>git branch [branch-name]: create a new branch at the current commit</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git merge [branch]: merge the specified branch's history into the current one </li>
+          <li>git log: show all commits in the current branch's history</li>
+
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
