--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>JavaScript notes here</li>
+          <li>JavaScript was designed to add interactivity to HTML pages.</li>
+          <li>JavaScript is a scripting language.</li>
+          <li>A scripting language is a lightweight programming language.</li>
+          <li>JavaScript is usually embedded directly into HTML pages.</li>
+          <li>JavaScript is an interpreted language (scripts execute without preliminary compilation).</li>
+          <li>A variable is a named container that allows us to store data in out code.</li>
+          <li>Control flow is the order in whih a computer executes code in a script.</li>
+          <li>The Math namespace object contains static properties and methods for mathematical constants and functions.</li>
+
         </ul>
       </section>
     </main>
