--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li>JavaScript is usually embedded directly into HTML pages.</li>
           <li>JavaScript is an interpreted language (scripts execute without preliminary compilation).</li>
           <li>A variable is a named container that allows us to store data in out code.</li>
-          <li>Control flow is the order in whih a computer executes code in a script.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>The Math namespace object contains static properties and methods for mathematical constants and functions.</li>
 
         </ul>
